--- a/package.json
+++ b/package.json
@@ -1,17 +1,19 @@
 {
-  "name": "pssst",
-  "version": "1.0.0",
-  "description": "Personal Speech Service SysTem",
-  "main": "app.js",
-  "devDependencies": {},
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "author": "orvs",
-  "license": "MIT",
-  "dependencies": {
-    "express": "^4.17.1",
-    "node-lame": "^1.3.1",
-    "socket.io": "^4.1.3"
+    "name": "pssst",
+    "version": "1.0.0",
+    "description": "Personal Speech Services SysTem",
+    "main": "app.js",
+    "devDependencies": {},
+    "scripts": {
+      "start": "node app.js",
+      "test": "echo \"Error: no test specified\" && exit 1"
+    },
+    "author": "orvs",
+    "license": "MIT",
+    "dependencies": {
+      "express": "^4.17.1",
+      "node-lame": "^1.3.1",
+      "socket.io": "^4.1.3"
+    }
   }
-}
+  
